--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,17 @@ idna==2.5
 incremental==17.5.0
 lxml==3.8.0
 parsel==1.2.0
+pep8==1.7.0
 pyasn1==0.2.3
 pyasn1-modules==0.0.9
 pycparser==2.18
 PyDispatcher==2.0.5
+pyflakes==1.5.0
+Pygments==2.2.0
 pyOpenSSL==17.2.0
 queuelib==1.4.2
 Scrapy==1.4.0
 service-identity==17.0.0
-six==1.10.0
 Twisted==17.5.0
 w3lib==1.17.0
 zope.interface==4.4.2
