Update Travis config to use the same task as developers.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
-  - pip install pep8 pyflakes
+  - pip install pytest pep8 pyflakes
 script:
-  - pyflakes .
-  - pep8 --ignore E265,E266,E501 .
-  - pytest
+  - invoke runtests
