--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ incremental==17.5.0
 invoke==0.20.1
 Jinja2==2.9.6
 lxml==3.8.0
+MarkupSafe==1.0
 parsel==1.2.0
 pep8==1.7.0
 py==1.4.34
@@ -25,12 +26,15 @@ pyflakes==1.5.0
 pyOpenSSL==17.2.0
 pytest==3.1.3
 python-dateutil==2.6.1
+python-slugify==1.2.4
 pytz==2017.2
 queuelib==1.4.2
 requests==2.18.2
 Scrapy==1.4.0
 service-identity==17.0.0
+six==1.10.0
 Twisted==17.5.0
+Unidecode==0.4.21
 urllib3==1.22
 w3lib==1.17.0
 zope.interface==4.4.2
