fix failing tests and add support for start_urls

--- a/tests/files/testspider.py.example
+++ b/tests/files/testspider.py.example
@@ -11,7 +11,11 @@ from datetime import datetime
 class TestspiderSpider(scrapy.Spider):
     name = 'testspider'
     allowed_domains = ['citybureau.org']
-    start_urls = ['http://citybureau.org']
+    start_urls = [
+        'http://www.citybureau.org/articles',
+        'http://www.citybureau.org/staff',
+        'http://www.citybureau.org/is-chicago-any-less-segregated'
+    ]
 
     def parse(self, response):
         """
@@ -81,8 +85,8 @@ class TestspiderSpider(scrapy.Spider):
             'url': None,
             'name': None,
             'coordinates': {
-              'latitude': None,
-              'longitude': None,
+                'latitude': None,
+                'longitude': None,
             },
         }
 
