more tweaks for tests, including changing the invoke signature

--- a/tests/files/testspider.py.example
+++ b/tests/files/testspider.py.example
@@ -10,12 +10,8 @@ from datetime import datetime
 
 class TestspiderSpider(scrapy.Spider):
     name = 'testspider'
-    allowed_domains = ['citybureau.org']
-    start_urls = [
-        'www.citybureau.org/articles',
-        'www.citybureau.org/staff',
-        'www.citybureau.org/is-chicago-any-less-segregated'
-    ]
+    allowed_domains = ['www.citybureau.org']
+    start_urls = ['http://www.citybureau.org/articles', 'http://www.citybureau.org/staff', 'http://www.citybureau.org/is-chicago-any-less-segregated']
 
     def parse(self, response):
         """
