add failing test

--- a/tests/files/testspider.py.example
+++ b/tests/files/testspider.py.example
@@ -10,6 +10,7 @@ from datetime import datetime
 
 class TestspiderSpider(scrapy.Spider):
     name = 'testspider'
+    long_name = 'Test Spider Board Of Trade And Englightenment'
     allowed_domains = ['citybureau.org']
     start_urls = ['http://citybureau.org']
 
