--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,9 @@ documenters_aggregator/caps.py
 # legistar cache
 _cache/
 
+# src dir from git commit packages in requirements.txt
+src/
+
 # deployment
 deploy/*.sh
 deploy/*.py
