--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ decorator==4.1.2
 dj-database-url==0.3.0
 Django==1.11.5
 docutils==0.14
+flake8==3.4.1
 geocoder==1.30.1
 hyperlink==17.3.0
 icalendar==3.11.7
@@ -36,7 +37,6 @@ lxml==4.0.0
 MarkupSafe==1.0
 opencivicdata==2.0.0
 parsel==1.2.0
-pep8==1.7.0
 pexpect==4.2.1
 pickleshare==0.7.4
 prompt-toolkit==1.0.14
@@ -48,7 +48,6 @@ pyasn1==0.2.3
 pyasn1-modules==0.0.9
 pycparser==2.18
 PyDispatcher==2.0.5
-pyflakes==1.5.0
 pygeocodio==0.5.0
 Pygments==2.2.0
 pyOpenSSL==17.2.0
