--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ dj-database-url==0.3.0
 Django==1.11.5
 docutils==0.14
 flake8==3.4.1
+freezegun==0.3.9
 geocoder==1.30.1
 hyperlink==17.3.0
 icalendar==3.11.7
