--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ hyperlink==17.3.0
 icalendar==3.11.7
 idna==2.6
 incremental==17.5.0
+Inflector==2.0.11
 invoke==0.20.1
 ipdb==0.10.3
 ipython==6.1.0
