--- a/deploy/prod_settings.py.example
+++ b/deploy/prod_settings.py.example
@@ -30,12 +30,12 @@ COOKIES_ENABLED = False
 # One of:
 # * documenters_aggregator.pipelines.DocumentersAggregatorLoggingPipeline,
 # * documenters_aggregator.pipelines.DocumentersAggregatorSQLAlchemyPipeline,
-# * documenters_aggregator.pipelines.DocumentersAggregatorAirtablePipeline
+# * documenters_aggregator.pipelines.AirtablePipeline
 #
 # Or define your own.
 # See http://scrapy.readthedocs.org/en/latest/topics/item-pipeline.html
 ITEM_PIPELINES = {
-    'documenters_aggregator.pipelines.DocumentersAggregatorAirtablePipeline': 300,
+    'documenters_aggregator.pipelines.AirtablePipeline': 300,
 }
 
 # Configure maximum concurrent requests performed by Scrapy (default: 16)
