--- a/tests/files/testspider.py.example
+++ b/tests/files/testspider.py.example
@@ -51,37 +51,37 @@ class TestspiderSpider(scrapy.Spider):
         Example:
         chi_buildings/201710161230/2176/daley_plaza_italian_exhibit
         """
-        return None
+        return ''
 
     def _parse_name(self, item):
         """
         Parse or generate event name.
         """
-        return None
+        return ''
 
     def _parse_description(self, item):
         """
         Parse or generate event name.
         """
-        return None
+        return ''
 
     def _parse_classification(self, item):
         """
         Parse or generate classification (e.g. public health, education, etc).
         """
-        return 'Not classified'
+        return ''
 
     def _parse_start(self, item):
         """
         Parse start date and time.
         """
-        return None
+        return ''
 
     def _parse_end(self, item):
         """
         Parse end date and time.
         """
-        return None
+        return ''
 
     def _parse_timezone(self, item):
         """
