--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,9 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
-      - echo Pushing the Docker image...
+      - echo Verifying build
+      - docker run -it --entrypoint /usr/local/bin/invoke $IMAGE_REPO_NAME:$IMAGE_TAG runtests
+      - echo Build verified; pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       - echo Syncing log groups and task definitions
       - python deploy/aws_setup.py
