--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
       - echo Build completed on `date`
       - echo Verifying build
       - docker run --entrypoint /usr/local/bin/invoke $IMAGE_REPO_NAME:$IMAGE_TAG runtests
-      - echo Build verified; pushing the Docker image...
+      - echo "Build verified; pushing the Docker image..."
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       - echo Syncing log groups and task definitions
       - python deploy/aws_setup.py
