align templates with events schema

--- a/tests/files/testspider.py.example
+++ b/tests/files/testspider.py.example
@@ -103,6 +103,7 @@ class TestspiderSpider(scrapy.Spider):
         return {
             'url': '',
             'name': '',
+            'address': '',
             'coordinates': {
                 'latitude': '',
                 'longitude': '',
