--- a/deploy/buildspec.yml
+++ b/deploy/buildspec.yml
@@ -21,4 +21,4 @@ phases:
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       - echo Syncing log groups and task definitions
       - python deploy/aws_setup.py
-      - 'curl -X POST --data-urlencode "payload={\"channel\": \"#labs_aggregator\", \"username\": \"ecs\", \"text\": \"<https://github.com/City-Bureau/documenters-aggregator/commit/$CODEBUILD_SOURCE_VERSION|Commit $CODEBUILD_SOURCE_VERSION> deployed to production. <https://console.aws.amazon.com/codebuild/home?region=us-east-1#/builds/$CODEBUILD_BUILD_ID/view/new|View build log>.\", \"icon_emoji\": \":ecs:\"}" $SLACK_WEBHOOK_URL'
+      - 'curl -X POST --data-urlencode "payload={\"channel\": \"#labs_city_scrapers\", \"username\": \"ecs\", \"text\": \"<https://github.com/City-Bureau/documenters-aggregator/commit/$CODEBUILD_SOURCE_VERSION|Commit $CODEBUILD_SOURCE_VERSION> deployed to production. <https://console.aws.amazon.com/codebuild/home?region=us-east-1#/builds/$CODEBUILD_BUILD_ID/view/new|View build log>.\", \"icon_emoji\": \":ecs:\"}" $SLACK_WEBHOOK_URL'
