Print ref for debugging purposes.

--- a/deploy/buildspec.yml
+++ b/deploy/buildspec.yml
@@ -14,4 +14,4 @@ phases:
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
   post_build:
     commands:
-      - bash deploy/check_for_master.sh
+      - bash deploy/post_build.sh
