--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ airtable-python-wrapper = "==0.5.0"
 appnope = "==0.1.0"
 "asn1crypto" = "==0.22.0"
 attrs = "==17.2.0"
-Automat = "==0.6.0"
+automat = "==0.6.0"
 betamax = "==0.8.0"
 betamax-serializers = "==0.2.0"
 "boto3" = "==1.4.7"
@@ -25,7 +25,7 @@ cryptography = "==2.0"
 cssselect = "==1.0.1"
 decorator = "==4.1.2"
 dj-database-url = "==0.3.0"
-Django = "==1.11.5"
+django = "==1.11.5"
 docutils = "==0.14"
 "flake8" = "==3.4.1"
 freezegun = "==0.3.9"
@@ -34,23 +34,23 @@ hyperlink = "==17.3.0"
 icalendar = "==3.11.7"
 idna = "==2.6"
 incremental = "==17.5.0"
-Inflector = "==2.0.11"
+inflector = "==2.0.11"
 invoke = "==0.20.1"
 ipdb = "==0.10.3"
 ipython = "==6.1.0"
-ipython_genutils = "==0.2.0"
+ipython-genutils = "==0.2.0"
 jedi = "==0.10.2"
-"Jinja2" = "==2.9.6"
+"jinja2" = "==2.9.6"
 jmespath = "==0.9.3"
 legistar = {git = "https://github.com/opencivicdata/python-legistar-scraper", editable = true, ref = "75a93ec42ab186a7ea4927be390a8bbb4148eaaf"}
 lxml = "==4.0.0"
 mapzen = {git = "https://github.com/duydo/python-mapzen.git", editable = true, ref = "80f59d1f6fcc3a3c1133ead5063fe7562f0180ac"}
-MarkupSafe = "==1.0"
+markupsafe = "==1.0"
 opencivicdata = "==2.0.0"
 parsel = "==1.2.0"
 pexpect = "==4.2.1"
 pickleshare = "==0.7.4"
-prompt_toolkit = "==1.0.14"
+prompt-toolkit = "==1.0.14"
 "psycopg2" = "==2.7.3.1"
 ptyprocess = "==0.5.2"
 pupa = "==0.8.0"
@@ -58,10 +58,10 @@ py = "==1.4.34"
 "pyasn1" = "==0.2.3"
 "pyasn1-modules" = "==0.0.9"
 pycparser = "==2.18"
-PyDispatcher = "==2.0.5"
+pydispatcher = "==2.0.5"
 pygeocodio = "==0.5.0"
-Pygments = "==2.2.0"
-pyOpenSSL = "==17.2.0"
+pygments = "==2.2.0"
+pyopenssl = "==17.2.0"
 pytest = "==3.1.3"
 python-dateutil = "==2.6.1"
 python-slugify = "==1.2.4"
@@ -72,18 +72,19 @@ raven = "==6.4.0"
 requests = "==2.18.4"
 "s3transfer" = "==0.1.11"
 scrapelib = "==1.1.0"
-Scrapy = "==1.4.0"
+scrapy = "==1.4.0"
 scrapy-sentry = "==0.8.0"
-service_identity = "==17.0.0"
+service-identity = "==17.0.0"
 simplegeneric = "==0.8.1"
 traitlets = "==4.3.2"
-Twisted = "==17.5.0"
-Unidecode = "==0.4.21"
+twisted = "==17.5.0"
+unidecode = "==0.4.21"
 "urllib3" = "==1.22"
 validictory = "==1.1.1"
 "w3lib" = "==1.17.0"
 wcwidth = "==0.1.7"
 "zope.interface" = "==4.4.2"
+usaddress = "*"
 
 
 [dev-packages]
