output spider name

--- a/Pipfile
+++ b/Pipfile
@@ -1,12 +1,9 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
 airtable-python-wrapper = "==0.5.0"
 appnope = "==0.1.0"
 "asn1crypto" = "==0.22.0"
@@ -76,15 +73,18 @@ Scrapy = "==1.4.0"
 scrapy-sentry = "==0.8.0"
 service_identity = "==17.0.0"
 simplegeneric = "==0.8.1"
+six = "==1.11.0"
 traitlets = "==4.3.2"
 Twisted = "==17.5.0"
 Unidecode = "==0.4.21"
 "urllib3" = "==1.22"
+usaddress = "==0.5.4"
 validictory = "==1.1.1"
 "w3lib" = "==1.17.0"
 wcwidth = "==0.1.7"
 "zope.interface" = "==4.4.2"
 
-
 [dev-packages]
 
+[requires]
+python_version = "3.6"
