--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,9 +4,9 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = documenters_aggregator.settings
+default = city_scrapers.settings
 
 
 [deploy]
 #url = http://localhost:6800/
-project = documenters_aggregator
+project = city_scrapers
