--- a/tests/files/test_testspider.py.example
+++ b/tests/files/test_testspider.py.example
@@ -1,7 +1,7 @@
 import pytest
 
 from tests.utils import file_response
-from documenters_aggregator.spiders.testspider import TestspiderSpider
+from city_scrapers.spiders.testspider import TestspiderSpider
 
 
 def test_tests():
