--- a/tests/files/testspider.py.example
+++ b/tests/files/testspider.py.example
@@ -68,7 +68,7 @@ class TestspiderSpider(Spider):
 
     def _parse_description(self, item):
         """
-        Parse or generate event name.
+        Parse or generate event description.
         """
         return ''
 
