--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-name: City Bureau Documenters Aggregator
+name: City Bureau: City Scrapers Project
 remote_theme: allejo/jekyll-docs-theme
 
 project:
