--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-name: City Bureau City Scrapers Project
+name: "City Bureau: City Scrapers Project"
 remote_theme: allecjo/jekyll-docs-theme
 
 project:
