--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
-  - pip install pytest pep8 pyflakes
+  - pip install -r requirements-dev.txt
 script:
   - invoke runtests
   - ./travis/validate_spiders.sh
