--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 -i https://pypi.org/simple
 airtable-python-wrapper==0.11.2
 asn1crypto==0.24.0
+atomicwrites==1.1.5
 attrs==18.1.0
 automat==0.7.0
+betamax-serializers==0.2.0
+betamax==0.8.1
 boto3==1.7.49
 botocore==1.10.49
 certifi==2018.4.16
@@ -12,6 +15,8 @@ constantly==15.1.0
 cryptography==2.2.2
 cssselect==1.0.3; python_version != '3.2.*'
 docutils==0.14
+flake8==3.5.0
+freezegun==0.3.10
 future==0.16.0
 git+https://github.com/opencivicdata/python-legistar-scraper@732accde243622de3bc390cc38815997886dc76c#egg=legistar
 hyperlink==18.0.0
@@ -23,13 +28,21 @@ jinja2==2.10
 jmespath==0.9.3
 lxml==4.2.3
 markupsafe==1.0
+mccabe==0.6.1
+more-itertools==4.2.0
 parsel==1.4.0
+pep8==1.7.1
+pluggy==0.6.0; python_version != '3.0.*'
 probableparsing==0.0.1
+py==1.5.4; python_version != '3.0.*'
 pyasn1-modules==0.2.2
 pyasn1==0.4.3
+pycodestyle==2.3.1
 pycparser==2.18
 pydispatcher==2.0.5
+pyflakes==1.6.0
 pyopenssl==18.0.0
+pytest==3.6.2
 python-crfsuite==0.9.5
 python-dateutil==2.7.3
 pytz==2018.5
