--- a/requirements.txt
+++ b/requirements.txt
@@ -47,8 +47,10 @@ python-crfsuite==0.9.5
 python-dateutil==2.7.3
 pytz==2018.5
 queuelib==1.5.0
+raven==6.9.0
 requests==2.19.1
 s3transfer==0.1.13
+scrapy-sentry==0.9.0
 scrapy==1.5.0
 service-identity==17.0.0
 six==1.11.0
