--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,42 +1,74 @@
-name: "City Bureau: City Scrapers Project"
-remote_theme: allejo/jekyll-docs-theme
+name: "City Scrapers"
+title: "City Scrapers"
+subtitle: "A City Bureau Project"
+
+remote_theme: "mmistakes/minimal-mistakes"
+
+minimal_mistakes_skin: "default"
 
 project:
     version: 0.1.0
 
-license:
-    software: MIT License
-    software_url: http://opensource.org/licenses/MIT
+# Conversion
+markdown: kramdown
+highlighter: rouge
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
 
-    docs: CC BY 3.0
-    docs_url: http://creativecommons.org/licenses/by/3.0/
+# Markdown Processing
+kramdown:
+  input: GFM
+  hard_wrap: false
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
 
-links:
-    header:
-      - title: GitHub
-        url: https://github.com/City-Bureau/city-scrapers
-    footer:
-      - title: GitHub
-        url: https://github.com/City-Bureau/city-scrapers
+# Sass/SCSS
+sass:
+  sass_dir: _sass
+  style: compressed
 
-ui:
-    header:
-        color1: "#E92320"
-        color2: "#f6ac4c"
-        trianglify: true
+# Outputting
+permalink: /:categories/:title/
+# paginate: 5 # amount of posts to show
+# paginate_path: /page:num/
+timezone: America/Chicago # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
-social:
-    github:
-        user: City-Bureau
-        repo: city-scrapers
-    twitter:
-        enabled: false
-        via:
-        hash:
-        account:
-    facebook:
-        enabled: false
-        profileUrl:
 
-analytics:
-    google: 
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-include-cache
+
+whitelist:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-include-cache
+
+collections:
+  docs:
+    output: true
+    permalink: /:collection/:path/
+
+defaults:
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: false
+  - scope:
+      path: ""
+      type: docs
+    values:
+      layout: single
+      read_time: false
+      author_profile: false
+      share: false
+      comments: false
+      sidebar:
+        nav: "docs"
