--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,5 @@
-name: "City Scrapers"
-title: "City Scrapers"
-subtitle: "A City Bureau Project"
+name: "City Scrapers: A City Bureau Project"
+title: "City Scrapers: A City Bureau Project"
 
 remote_theme: "mmistakes/minimal-mistakes"
 
