--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ title: "City Scrapers: A City Bureau Project"
 
 remote_theme: "mmistakes/minimal-mistakes"
 
-minimal_mistakes_skin: "default"
+minimal_mistakes_skin: "contrast"
 
 project:
     version: 0.1.0
