--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,7 +14,8 @@ title: "City Scrapers"
 title_separator: "|"
 name: "City Bureau"
 description: "Website for City Bureau's City Scrapers project"
-url: "https://cityscrapers.org"
+url: "https://cityscraper.org"
+baseurl: ""
 repository: "City-Bureau/city-scrapers"
 teaser: "/assets/images/citybureau.png"
 
@@ -25,12 +26,10 @@ facebook:
   username: CityBureau
 og_image: "/assets/images/citybureau.png"
 
-# Analytics
-# analytics:
-#   provider               : false # false (default), "google", "google-universal", "custom"
-#   google:
-#     tracking_id          :
-#     anonymize_ip         : # true, false (default)
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "UA-68381272-3"
 
 footer:
   links:
