Fix docs domain

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,7 +14,7 @@ title: "City Scrapers"
 title_separator: "|"
 name: "City Bureau"
 description: "Website for City Bureau's City Scrapers project"
-url: "https://cityscraper.org"
+url: "https://cityscrapers.org"
 baseurl: ""
 repository: "City-Bureau/city-scrapers"
 teaser: "/assets/images/citybureau.png"
