Update docs site description

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,7 +13,7 @@ locale: "en-US"
 title: "City Scrapers"
 title_separator: "|"
 name: "City Bureau"
-description: "Website for City Bureau's City Scrapers project"
+description: "An open source guide for City Bureau's City Scrapers project"
 url: "https://cityscrapers.org"
 baseurl: ""
 repository: "City-Bureau/city-scrapers"
