--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,53 @@
 -i https://pypi.org/simple
-airtable-python-wrapper==0.11.3.post1
-arrow==0.4.2
 asn1crypto==0.24.0
 atomicwrites==1.2.1
 attrs==18.2.0
 automat==0.7.0
-azure-common==1.1.16
-azure-storage-blob==1.4.0
-azure-storage-common==1.4.0
-boto3==1.9.75
-botocore==1.12.75
 certifi==2018.11.29
 cffi==1.11.5
 chardet==3.0.4
+city-scrapers-core[azure]==0.1.6
 constantly==15.1.0
 cryptography==2.4.2
 cssselect==1.0.3
-docutils==0.14
 flake8==3.6.0
 freezegun==0.3.11
-future==0.17.1
-git+https://github.com/opencivicdata/python-legistar-scraper@8c3166ea3687376d6c1ecdaef9aa5534bf1c984d#egg=legistar
+git+https://github.com/opencivicdata/python-legistar-scraper@bf25cc94980f1608b4cc6766529f1155a273e049#egg=legistar
 hyperlink==18.0.0
-ics==0.4
 idna==2.8
 incremental==17.5.0
 inflector==2.0.12
 isort==4.3.4
 jinja2==2.10
-jmespath==0.9.3
+jsonschema==3.0.0b1
 lxml==4.3.0
 markupsafe==1.1.0
 mccabe==0.6.1
 more-itertools==5.0.0
 parsel==1.5.1
-pluggy==0.8.0
-probableparsing==0.0.1
+pluggy==0.8.1
 py==1.7.0
-pycodestyle==2.4.0
 pyasn1-modules==0.2.3
 pyasn1==0.4.5
+pycodestyle==2.4.0
 pycparser==2.19
 pydispatcher==2.0.5
 pyflakes==2.0.0
 pyhamcrest==1.9.0
-pyopenssl==18.0.0
-pytest==4.1.0
-python-crfsuite==0.9.6
+pyopenssl==19.0.0
+pyrsistent==0.14.9
+pytest==4.1.1
 python-dateutil==2.7.5
 pytz==2018.9
 queuelib==1.5.0
 raven==6.10.0
 requests==2.21.0
-s3transfer==0.1.13
 scrapy-sentry==0.9.0
 scrapy==1.5.1
 service-identity==18.1.0
 six==1.12.0
 twisted==18.9.0
-urllib3==1.24.1 ; python_version >= '3.4'
-usaddress==0.5.10
-w3lib==1.19.0
+urllib3==1.24.1
+w3lib==1.20.0
 yapf==0.25.0
 zope.interface==4.6.0
