--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ twisted = ">=18.9.0"
 scrapy = "*"
 scrapy-sentry = "*"
 legistar = {git = "https://github.com/opencivicdata/python-legistar-scraper"} 
-city-scrapers-core = {extras = ["azure"]}
+city-scrapers-core = {extras = ["azure"],version = "*"}
 
 [dev-packages]
 freezegun = "*"
