Migrate to using a separate city-scrapers-core package, new meetings item (#657)

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,18 @@ install:
   - pipenv install --dev --three --system
 script:
   - isort --check-only --diff || exit 1
-  - yapf --diff --recursive ./city_scrapers/ ./deploy/ ./scripts/ ./tests/ || exit 1
+  - yapf --diff --recursive ./city_scrapers/ ./tests/ || exit 1
   - flake8
   - pytest
-  - ./travis/validate_spiders.sh
+  - scrapy validate
 deploy:
   - skip_cleanup: true
     provider: script
-    script: ./deploy/deploy_acr.sh
+    script:
+      - export PYTHONPATH=$(pwd):$PYTHONPATH
+      - export SCRAPY_SETTINGS_MODULE=city_scrapers.settings.prod
+      - scrapy runall
+      - scrapy combinefeeds
     on:
       branch: master
+      condition: $TRAVIS_EVENT_TYPE = cron
