--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,16 @@ script:
   - flake8
   - pytest
   - scrapy validate
+before_deploy:
+  - export PYTHONPATH=$(pwd):$PYTHONPATH
+  - export SCRAPY_SETTINGS_MODULE=city_scrapers.settings.prod
 deploy:
   - skip_cleanup: true
     provider: script
-    script:
-      - export PYTHONPATH=$(pwd):$PYTHONPATH
-      - export SCRAPY_SETTINGS_MODULE=city_scrapers.settings.prod
-      - scrapy runall
-      - scrapy combinefeeds
+    script: scrapy runall
     on:
+      python: 3.6
       branch: master
       condition: $TRAVIS_EVENT_TYPE = cron
+after_deploy:
+  - scrapy combinefeeds
