--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,56 @@
 -i https://pypi.org/simple
 asn1crypto==0.24.0
-atomicwrites==1.2.1
-attrs==18.2.0
+attrs==19.1.0
 automat==0.7.0
-certifi==2018.11.29
-cffi==1.11.5
+azure-common==1.1.19
+azure-storage-blob==1.5.0
+azure-storage-common==1.4.0
+certifi==2019.3.9
+cffi==1.12.3
 chardet==3.0.4
-city-scrapers-core==0.2.5
+city-scrapers-core[azure]==0.3.0
 constantly==15.1.0
-cryptography==2.4.2
+cryptography==2.6.1
 cssselect==1.0.3
-flake8==3.6.0
-freezegun==0.3.11
-git+https://github.com/opencivicdata/python-legistar-scraper@bf25cc94980f1608b4cc6766529f1155a273e049#egg=legistar
-hyperlink==18.0.0
+git+https://github.com/opencivicdata/python-legistar-scraper@046308ed7e9f8e522e7bdca2c452686b6731122f#egg=legistar
+hyperlink==19.0.0
 idna==2.8
 incremental==17.5.0
-inflector==2.0.12
-isort==4.3.4
-jinja2==2.10
-jsonschema==3.0.0b1
-lxml==4.3.0
-markupsafe==1.1.0
-mccabe==0.6.1
-more-itertools==5.0.0
+jsonschema==3.0.1
+lxml==4.3.3
 parsel==1.5.1
-pluggy==0.8.1
-py==1.7.0
-pyasn1-modules==0.2.3
+pyasn1-modules==0.2.4
 pyasn1==0.4.5
-pycodestyle==2.4.0
 pycparser==2.19
 pydispatcher==2.0.5
-pyflakes==2.0.0
 pyhamcrest==1.9.0
 pyopenssl==19.0.0
-pyrsistent==0.14.9
-pytest==4.1.1
-python-dateutil==2.7.5
-pytz==2018.9
+pyrsistent==0.14.11
+python-dateutil==2.8.0
+pytz==2019.1
 queuelib==1.5.0
 raven==6.10.0
 requests==2.21.0
 scrapy-sentry==0.9.0
-scrapy==1.5.1
 scrapy-wayback-middleware==0.0.2
+scrapy==1.6.0
 service-identity==18.1.0
 six==1.12.0
-twisted==18.9.0
-urllib3==1.24.1
+twisted==19.2.0
+urllib3==1.24.2
 w3lib==1.20.0
-yapf==0.25.0
 zope.interface==4.6.0
+atomicwrites==1.3.0
+entrypoints==0.3
+flake8==3.7.7
+freezegun==0.3.11
+isort==4.3.17
+mccabe==0.6.1
+more-itertools==7.0.0 ; python_version > '2.7'
+pluggy==0.9.0
+py==1.8.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pytest==4.4.1
+six==1.12.0
+yapf==0.27.0
