--- a/requirements.txt
+++ b/requirements.txt
@@ -2,30 +2,30 @@
 asn1crypto==0.24.0
 attrs==19.1.0
 automat==0.7.0
-azure-common==1.1.19
-azure-storage-blob==1.5.0
-azure-storage-common==1.4.0
+azure-common==1.1.20
+azure-storage-blob==2.0.1
+azure-storage-common==2.0.0
 certifi==2019.3.9
 cffi==1.12.3
 chardet==3.0.4
-city-scrapers-core[azure]==0.3.0
+city-scrapers-core[azure]==0.4.1
 constantly==15.1.0
 cryptography==2.6.1
 cssselect==1.0.3
-git+https://github.com/opencivicdata/python-legistar-scraper@046308ed7e9f8e522e7bdca2c452686b6731122f#egg=legistar
+git+https://github.com/opencivicdata/python-legistar-scraper@0ec3578939ae4dab90ea767f397e276158cc66c0#egg=legistar
 hyperlink==19.0.0
 idna==2.8
 incremental==17.5.0
 jsonschema==3.0.1
 lxml==4.3.3
 parsel==1.5.1
-pyasn1-modules==0.2.4
+pyasn1-modules==0.2.5
 pyasn1==0.4.5
 pycparser==2.19
 pydispatcher==2.0.5
 pyhamcrest==1.9.0
 pyopenssl==19.0.0
-pyrsistent==0.14.11
+pyrsistent==0.15.2
 python-dateutil==2.8.0
 pytz==2019.1
 queuelib==1.5.0
@@ -37,20 +37,22 @@ scrapy==1.6.0
 service-identity==18.1.0
 six==1.12.0
 twisted==19.2.0
-urllib3==1.24.2
+urllib3==1.24.3
 w3lib==1.20.0
 zope.interface==4.6.0
 atomicwrites==1.3.0
 entrypoints==0.3
 flake8==3.7.7
 freezegun==0.3.11
-isort==4.3.17
+isort==4.3.19
 mccabe==0.6.1
 more-itertools==7.0.0 ; python_version > '2.7'
-pluggy==0.9.0
+pluggy==0.11.0
 py==1.8.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
-pytest==4.4.1
+pytest==4.5.0
+python-dateutil==2.8.0
 six==1.12.0
+wcwidth==0.1.7
 yapf==0.27.0
