Update Travis CI build

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: python
 python:
   - 3.5
   - 3.6
-  - 3.7-dev
+  - 3.7
 install:
   - pip install pipenv
-  - pipenv install --ignore-pipfile --dev --three --system
+  - pipenv install --ignore-pipfile --dev
 script:
   - isort --check-only --diff || exit 1
   - yapf --diff --recursive ./city_scrapers/ ./tests/ || exit 1
