locks requirements.txt to image tag

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,61 @@
--i https://pypi.org/simple
-python-dateutil
-pytz
-requests
-scrapy
-scrapy-sentry
-git+https://github.com/opencivicdata/python-legistar-scraper@854a3725f2325f866f897fbc0a6682f8ab372dc7#egg=legistar
-scrapy-wayback-middleware
-azure-storage-blob<=2.2
-city-scrapers-core[azure]
-pypdf2
-freezegun
-pytest
-flake8
-isort
-yapf
+attrs==19.3.0
+Automat==0.8.0
+azure-common==1.1.23
+azure-storage-blob==2.1.0
+azure-storage-common==2.1.0
+certifi==2019.9.11
+cffi==1.13.2
+chardet==3.0.4
+city-scrapers-core==0.5.4
+constantly==15.1.0
+cryptography==2.8
+cssselect==1.1.0
+entrypoints==0.3
+flake8==3.7.9
+freezegun==0.3.12
+hyperlink==19.0.0
+icalendar==4.0.4
+idna==2.8
+importlib-metadata==0.23
+incremental==17.5.0
+isort==4.3.21
+jsonschema==3.2.0
+legistar==0.0.1
+lxml==4.4.2
+mccabe==0.6.1
+more-itertools==7.2.0
+packaging==19.2
+parsel==1.5.2
+pluggy==0.13.1
+Protego==0.1.15
+py==1.8.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
+pycodestyle==2.5.0
+pycparser==2.19
+PyDispatcher==2.0.5
+pyflakes==2.1.1
+PyHamcrest==1.9.0
+pyOpenSSL==19.1.0
+pyparsing==2.4.5
+PyPDF2==1.26.0
+pyrsistent==0.15.6
+pytest==5.3.1
+python-dateutil==2.8.1
+pytz==2019.3
+queuelib==1.5.0
+raven==6.10.0
+requests==2.22.0
+scrapelib==1.2.0
+Scrapy==1.8.0
+scrapy-sentry==0.9.0
+scrapy-wayback-middleware==0.2.0
+service-identity==18.1.0
+six==1.13.0
+Twisted==19.10.0
+urllib3==1.25.7
+w3lib==1.21.0
+wcwidth==0.1.7
+yapf==0.28.0
+zipp==0.6.0
+zope.interface==4.7.1
