--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ importlib-metadata==0.23
 incremental==17.5.0
 isort==4.3.21
 jsonschema==3.2.0
-legistar==0.0.1
+git+https://github.com/opencivicdata/python-legistar-scraper@854a3725f2325f866f897fbc0a6682f8ab372dc7#egg=legistar
 lxml==4.4.2
 mccabe==0.6.1
 more-itertools==7.2.0
