Update deps, CI, cleanup docs (#934)

--- a/Pipfile
+++ b/Pipfile
@@ -13,11 +13,15 @@ legistar = {git = "https://github.com/opencivicdata/python-legistar-scraper"}
 scrapy-wayback-middleware = "*"
 city-scrapers-core = {extras = ["azure"],version = "*"}
 pypdf2 = "*"
+pywin32 = {version = "*", sys_platform = "== 'win32'"}
 
 [dev-packages]
 freezegun = "*"
 pytest = "*"
+pathlib2 = {version = "*", python_version = "< '3.6'"}
 "flake8" = "*"
 isort = "*"
 yapf = "*"
 
+[scripts]
+style = "yapf --in-place --recursive ./city_scrapers/ ./tests/"
