--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -6,6 +6,7 @@ on:
 
 env:
   CI: true
+  PIPENV_VENV_IN_PROJECT: true
   SCRAPY_SETTINGS_MODULE: city_scrapers.settings.prod
   # WAYBACK_ENABLED: true
   AUTOTHROTTLE_MAX_DELAY: 30.0
@@ -25,10 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
+
     - name: Connect to OpenVPN
       run: |
         sudo apt-get install -y openvpn
@@ -37,15 +35,35 @@ jobs:
         echo "$OPENVPN_CONFIG" | sudo tee -a /etc/openvpn/ovpn.conf
         sudo openvpn --config /etc/openvpn/ovpn.conf --daemon
         sleep 120
+
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.7
+
+    - name: Install Pipenv
+      uses: dschep/install-pipenv-action@v1
+
+    - name: Cache Python dependencies
+      uses: actions/cache@v1
+      with:
+        path: .venv
+        key: pip-3.7-${{ hashFiles('**/Pipfile.lock') }}
+        restore-keys: |
+          pip-3.7-
+          pip-
+
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      run: pipenv sync
+      env:
+        PIPENV_DEFAULT_PYTHON_VERSION: 3.7
+
     - name: Run scrapers
       run: |
         export PYTHONPATH=$(pwd):$PYTHONPATH
         ./.deploy.sh
+
     - name: Combine output feeds
       run: |
         export PYTHONPATH=$(pwd):$PYTHONPATH
-        scrapy combinefeeds -s LOG_ENABLED=False
+        pipenv run scrapy combinefeeds -s LOG_ENABLED=False
