--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ scrapy-wayback-middleware = "*"
 city-scrapers-core = {extras = ["azure"],version = "*"}
 pypdf2 = "*"
 pywin32 = {version = "*",sys_platform = "== 'win32'"}
+zipp = "==0.6.0"
 
 [dev-packages]
 freezegun = "*"
