--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
 
     - name: Install Pipenv
       uses: dschep/install-pipenv-action@v1
+      with:
+        version: 2018.11.26
 
     - name: Install dependencies
       run: pipenv sync --dev
