--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -43,6 +43,8 @@ jobs:
 
     - name: Install Pipenv
       uses: dschep/install-pipenv-action@v1
+      with:
+        version: 2018.11.26
 
     - name: Install dependencies
       run: pipenv sync
