Drop Python 3.5, update Pipenv

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,9 @@ jobs:
   check:
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 4
+      max-parallel: 3
       matrix:
-        python-version: [3.5, 3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8]
 
     steps:
     - uses: actions/checkout@v1
@@ -27,8 +27,6 @@ jobs:
 
     - name: Install Pipenv
       uses: dschep/install-pipenv-action@v1
-      with:
-        version: 2018.11.26
 
     - name: Install dependencies
       run: pipenv sync --dev
