--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,11 @@ default_section = THIRDPARTY
 known_first_party = city_scrapers
 skip_glob =
     */.venv/*
+    */docs/*
+    */tests/files/*
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
-multi_line_output = 5
+multi_line_output = 3
 line_length = 88
+include_trailing_comma = True
+force_grid_wrap = 0
+use_parentheses = True
