--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,38 +18,38 @@ jobs:
         python-version: [3.6, 3.7, 3.8]
 
     steps:
-    - uses: actions/checkout@v1
+      - uses: actions/checkout@v1
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install Pipenv
-      uses: dschep/install-pipenv-action@v1
+      - name: Install Pipenv
+        uses: dschep/install-pipenv-action@v1
 
-    - name: Install dependencies
-      run: pipenv sync --dev
-      env:
-        PIPENV_DEFAULT_PYTHON_VERSION: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: pipenv sync --dev
+        env:
+          PIPENV_DEFAULT_PYTHON_VERSION: ${{ matrix.python-version }}
 
-    - name: Check imports with isort
-      run: pipenv run isort --check-only --diff || exit 1
+      - name: Check imports with isort
+        run: pipenv run isort . --check --diff || exit 1
 
-    - name: Check style with black
-      run: pipenv run black ./city_scrapers/ ./tests/ --check
+      - name: Check style with black
+        run: pipenv run black ./city_scrapers/ ./tests/ --check
 
-    - name: Lint with flake8
-      run: pipenv run flake8
+      - name: Lint with flake8
+        run: pipenv run flake8
 
-    - name: Test with pytest
-      run: pipenv run pytest
+      - name: Test with pytest
+        run: pipenv run pytest
 
-    - name: Validate output with scrapy
-      if: github.event_name == 'pull_request'
-      run: |
-        git checkout ${{ github.base_ref }}
-        git checkout $(git show-ref | grep pull | awk '{ print $2 }')
-        git diff-index --name-only --diff-filter=d $(git merge-base HEAD ${{ github.base_ref }}) | \
-        grep -Pio '(?<=/spiders/).*(?=\.py)' | \
-        xargs pipenv run scrapy validate
+      - name: Validate output with scrapy
+        if: github.event_name == 'pull_request'
+        run: |
+          git checkout ${{ github.base_ref }}
+          git checkout $(git show-ref | grep pull | awk '{ print $2 }')
+          git diff-index --name-only --diff-filter=d $(git merge-base HEAD ${{ github.base_ref }}) | \
+          grep -Pio '(?<=/spiders/).*(?=\.py)' | \
+          xargs pipenv run scrapy validate
