--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,7 +2,7 @@ name: Cron Build
 
 on:
   schedule:
-    - cron: '12 6 * * *'
+    - cron: "12 6 * * *"
 
 env:
   CI: true
@@ -25,36 +25,36 @@ jobs:
   crawl:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+      - uses: actions/checkout@v1
 
-    - name: Connect to OpenVPN
-      run: |
-        sudo apt-get install -y openvpn
-        echo "$OPENVPN_USER" | sudo tee -a /etc/openvpn/client/auth
-        echo "$OPENVPN_PASS" | sudo tee -a /etc/openvpn/client/auth
-        echo "$OPENVPN_CONFIG" | sudo tee -a /etc/openvpn/ovpn.conf
-        sudo openvpn --config /etc/openvpn/ovpn.conf --daemon
-        sleep 120
+      - name: Connect to OpenVPN
+        run: |
+          sudo apt-get install -y openvpn
+          echo "$OPENVPN_USER" | sudo tee -a /etc/openvpn/client/auth
+          echo "$OPENVPN_PASS" | sudo tee -a /etc/openvpn/client/auth
+          echo "$OPENVPN_CONFIG" | sudo tee -a /etc/openvpn/ovpn.conf
+          sudo openvpn --config /etc/openvpn/ovpn.conf --daemon
+          sleep 120
 
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
 
-    - name: Install Pipenv
-      uses: dschep/install-pipenv-action@v1
+      - name: Install Pipenv
+        uses: dschep/install-pipenv-action@v1
 
-    - name: Install dependencies
-      run: pipenv sync
-      env:
-        PIPENV_DEFAULT_PYTHON_VERSION: 3.7
+      - name: Install dependencies
+        run: pipenv sync
+        env:
+          PIPENV_DEFAULT_PYTHON_VERSION: 3.7
 
-    - name: Run scrapers
-      run: |
-        export PYTHONPATH=$(pwd):$PYTHONPATH
-        ./.deploy.sh
+      - name: Run scrapers
+        run: |
+          export PYTHONPATH=$(pwd):$PYTHONPATH
+          ./.deploy.sh
 
-    - name: Combine output feeds
-      run: |
-        export PYTHONPATH=$(pwd):$PYTHONPATH
-        pipenv run scrapy combinefeeds -s LOG_ENABLED=False
+      - name: Combine output feeds
+        run: |
+          export PYTHONPATH=$(pwd):$PYTHONPATH
+          pipenv run scrapy combinefeeds -s LOG_ENABLED=False
